<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  android:id="@+id/all"
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:background="@drawable/white"
  android:minWidth="300dp" 
  android:minHeight="400dp"
>


<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="wrap_content"
  android:orientation="vertical"
>
	<RelativeLayout
		android:id="@+id/r_all"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
	>
	
			<TextView
				android:id="@+id/widget_text"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/alert_11"
				android:textSize="20dp"
				android:textColor="@drawable/black"
				android:layout_alignParentTop="true"
				android:layout_alignParentLeft="true"

			>
			</TextView>
			
			
			<Button
				android:id="@+id/w_button1"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:drawableLeft="@drawable/w_w1"
				android:text="@string/alert_12"
				android:textSize="16sp"
				android:layout_below="@+id/widget_text"
				android:background="@drawable/white"
			>
			</Button>
	
			<Button
				android:id="@+id/w_button2"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:drawableLeft="@drawable/w_w2"
				android:text="@string/alert_13"
				android:textSize="16sp"
				android:layout_below="@+id/w_button1"
				android:background="@drawable/white"
			>
			</Button>
			
			<TextView
				android:id="@+id/separator"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text=""
				android:textSize="20sp"
				android:textColor="@drawable/black"
				android:layout_below="@+id/w_button2"
			>
			</TextView>
			
			
			<TextView
				android:id="@+id/show_text"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/alert_4"
				android:textSize="20dp"
				android:textColor="@drawable/black"
				android:layout_below="@+id/separator"
			>
			</TextView>
	
			<Button
				android:id="@+id/button1_text"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_below="@+id/show_text"
				android:drawableLeft="@drawable/thebutton1"
				android:text="@string/alert_5"
				android:textSize="20sp"
				android:textColor="@drawable/black"
				android:background="@drawable/white"
			>
			</Button>

			<Button
				android:id="@+id/button2_text"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_below="@+id/button1_text"
				android:drawableLeft="@drawable/thebutton2"
				android:text="@string/alert_6"
				android:textSize="20sp"
				android:textColor="@drawable/black"
				android:background="@drawable/white"
			>
			</Button>

			<Button
				android:id="@+id/button3_text"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_below="@+id/button2_text"
				android:drawableLeft="@drawable/thebutton3"
				android:text="@string/alert_7"
				android:textSize="20sp"
				android:textColor="@drawable/black"
				android:background="@drawable/white"
			>
			</Button>
			
			<Button
				android:id="@+id/button4_text"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_below="@+id/button3_text"
				android:drawableLeft="@drawable/thebutton4"
				android:text="@string/alert_8"
				android:textSize="20sp"
				android:textColor="@drawable/black"
				android:background="@drawable/white"
			>
			</Button>
			
			<Button
				android:id="@+id/button5_text"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_below="@+id/button4_text"
				android:drawableLeft="@drawable/thebutton5"
				android:text="@string/alert_9"
				android:textSize="20sp"
				android:textColor="@drawable/black"
				android:background="@drawable/white"
			>
			</Button>
			
			
		  <TextView 
		    android:id="@+id/mText"
		    android:layout_width="fill_parent" 
			android:layout_height="wrap_content"
		    android:layout_marginLeft="2dip"
		    android:layout_marginRight="2dip"
		    android:text="@string/alert_10"
		    android:textSize="18sp"
		    android:layout_below="@+id/button5_text"
		    android:textColor="@drawable/black"
		    android:gravity="left"
		  >
		  </TextView>
  
 	</RelativeLayout>
</ScrollView>
	
	
</LinearLayout>